--- a/first/Cells/ProcessTableCell.xib
+++ b/first/Cells/ProcessTableCell.xib
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="processTableCell" id="KGk-i7-Jjw" customClass="ProcessTableCell" customModule="first" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="processTableCell" rowHeight="94" id="KGk-i7-Jjw" customClass="ProcessTableCell" customModule="first" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="362" height="94"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="362" height="93.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yCI-tq-hgz">
-                        <rect key="frame" x="15" y="11.5" width="42" height="21"/>
+                        <rect key="frame" x="15" y="36.5" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -35,6 +35,7 @@
             <connections>
                 <outlet property="titleLabel" destination="yCI-tq-hgz" id="ctS-g7-L2L"/>
             </connections>
+            <point key="canvasLocation" x="168.11594202898553" y="104.46428571428571"/>
         </tableViewCell>
     </objects>
 </document>
