--- a/first/Cells/ToDoTableCell.xib
+++ b/first/Cells/ToDoTableCell.xib
@@ -12,29 +12,29 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="doneTableCell" rowHeight="203" id="KGk-i7-Jjw" customClass="DoneTableCell" customModule="first" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="546" height="203"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ToDoTableCell" customModule="first" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="546" height="202.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m93-EX-ojP">
-                        <rect key="frame" x="45" y="91" width="42" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V6r-LV-s1M">
+                        <rect key="frame" x="15" y="11.5" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="V6r-LV-s1M" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="XLW-cz-8ni"/>
+                    <constraint firstItem="V6r-LV-s1M" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="ukq-S7-gB4"/>
+                </constraints>
             </tableViewCellContentView>
-            <rect key="contentStretch" x="0.0" y="1" width="1" height="1"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="text" destination="m93-EX-ojP" id="Q6G-0a-h8J"/>
-                <outlet property="textLabel" destination="m93-EX-ojP" id="ucl-gk-hBs"/>
+                <outlet property="titleLabel" destination="V6r-LV-s1M" id="UaY-oH-KCm"/>
             </connections>
-            <point key="canvasLocation" x="326.08695652173918" y="31.138392857142854"/>
         </tableViewCell>
     </objects>
 </document>
